Prevent KOrganizer from ignoring reminders that trigger during downtime

Wait for all collections to be populated before performing checks for reminders. Avoids the situation where KOrganizer thinks it has already checked for outstanding reminders in all collections even though it only looked at an uninitialized, empty list of collections.

BUG: 282535
FIXED-IN: 4.10
REVIEW: 106824
DIGEST: Makes KOrganizer reminders work reliably again for people who do not have KDE running 24/7. This was broken since the switch to Akonadi.